--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,8 @@
   </head>
 
   <body>
-  	<p id="notice"><%= notice %></p>
+    <p id="notice"><%= notice%></p>
+  	<p id="error" style="color:red"><%=flash[:error]%></p>
     <%= yield %>
   </body>
 </html>
